feat: update index.html for task

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a class="contact-link github-contact" href="https://github.com/IrinaEnotova" target="_blank">IrinaEnotova</a>
               </li>
               <li class="contact-item">
-                <a class="contact-link phone-contact" href="tel:+79879232119">+7 987 923 21 19</a>
+                <a class="contact-link phone-contact" href="tel:+79879232119">+7&nbsp;987&nbsp;923&nbsp;21&nbsp;19</a>
               </li>
             </ul>
           </section>
@@ -123,7 +123,7 @@
                 const its_btnMenu = target == settingsBtn;
                 const menu_is_active = settings.classList.contains('active-set');
               
-                if (!its_menu && !its_btnMenu && menu_is_active) {
+                if (!its_menu &amp;&amp; !its_btnMenu &amp;&amp; menu_is_active) {
                     toggleSettings();
                 }
               });
